--- a/vzstudy/src/App.css
+++ b/vzstudy/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+main {
+  width: 100%;
+  height: 1000px;
+  overflow: hidden;
+  background-color: rgb(223, 233, 247);
+}
