--- a/vzstudy/src/components/HomeIcon/HomeIcon.scss
+++ b/vzstudy/src/components/HomeIcon/HomeIcon.scss
@@ -1,9 +1,14 @@
 .Ikona {
+  width: 35px;
+  height: 35px;
+
+  @media only screen and (min-width: 400px) {
     width: 40px;
     height: 40px;
+  }
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
