--- a/vzstudy/src/components/Navigation/Navigation.scss
+++ b/vzstudy/src/components/Navigation/Navigation.scss
@@ -1,34 +1,56 @@
 .Navigation {
-    list-style: none;
-    margin: 0;
+  list-style: none;
+  margin: 0;
+  margin-top: 210px;
+  position: absolute;
+  background-color: #04326e;
+  padding: 0;
+  float: right;
 
-    &__Item {
-        display: inline;
-        line-height: 80px;
-        margin-right: 50px;
+  @media only screen and (min-width: 1024px) {
+    position: relative;
+    display: block;
+    margin-top: 0;
+    background: none;
+  }
 
-        &:last-child {
-            margin-right: 0;
-        }
+  &__Item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 30px;
+    height: 40px;
+    width: 130px;
+    margin: auto;
+    border-bottom: 1px solid #fff;
+
+    @media only screen and (min-width: 1024px) {
+      width: auto;
+      display: inline;
+      line-height: 80px;
+      margin-right: 50px;
+      border-bottom: none;
     }
 
-    &__Link {
-        text-decoration: none;
-        color: silver;
-        font-size: 15pt;
-        font-weight: 700;
-        letter-spacing: 0.02em;
-        transition: color 0.3s ease-out;
+    &:last-child {
+      border-bottom: none;
 
-        &:hover {
-            color: #c59613;
-        }
+      @media only screen and (min-width: 1024px) {
+        margin-right: 0;
+      }
     }
-}
+  }
 
-@media only screen and (min-width: 1024px){
-    .Navigation {
-        display: block;
-        float: right;
+  &__Link {
+    text-decoration: none;
+    color: silver;
+    font-size: 15pt;
+    font-weight: 700;
+    letter-spacing: 0.02em;
+    transition: color 0.3s ease-out;
+
+    &:hover {
+      color: #c59613;
     }
+  }
 }
