Napravljena stranica kao komponenta
Stranice (osim početne) se prikazuju prema parametrima (props) komponente

--- a/vzstudy/src/components/MainImage/MainImage.scss
+++ b/vzstudy/src/components/MainImage/MainImage.scss
@@ -1,12 +1,14 @@
 .Main {
-  &-Container {
-    width: 100%;
+  // &-Container {
+  //   width: 100%;
+  //   margin-bottom: 20px;
 
-    @media only screen and (min-width: 1024px) {
-      width: 60%;
-      margin: auto;
-    }
-  }
+  //   @media only screen and (min-width: 1024px) {
+  //     width: 60%;
+  //     margin: auto;
+  //     margin-bottom: 50px;
+  //   }
+  // }
 
   &-Image {
     width: 100%;
